[tool.poetry]
name = "repl_nix_40823139githubio"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.8.0"
gevent = "^22.10.2"
pytz = "^2023.3"
bs4 = "^0.0.1"
fabric = "^3.1.0"
Flask = "^2.3.2"
Jinja2 = "^3.1.2"
typogrify = "^2.0.7"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
